--- a/style.css
+++ b/style.css
@@ -1,25 +1,47 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Kaushan+Script&family=Martian+Mono:wght@200;300&family=Mooli&family=Poppins:wght@200;300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+/* #3C3C62 */
+/* #36A28A */
+/* #542F8C */
+/* #35363B */
+
 * {
     margin: 0%;
     padding: 0%; 
-    box-sizing: none;
+    box-sizing: border-box;
     text-decoration: none;
+    scroll-behavior: smooth;
 }
 
 body {
+    height: 200vh;
     font-size: 100%;
-    border: 1px solid #000;
+    font-family: Inter;
     background: #3E4046;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .cabecalho {
     display: flex;
+    position: sticky;
+    top: 0;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    padding: 24px;
+    justify-content: space-between;
+    padding: 10px 58px ;
+    background-color :#3C3C62 ;
+    border: none;
+}
+
+.login_btn {
+    background-color: #542F8C;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.login_btn:hover {
+    background-color: #5d3698;
 }
 
 .cabecalho-vox {
@@ -34,19 +56,177 @@ body {
 .cabecalho-menu {
     display: flex;
     gap: 32px;
+    align-items: center;
+    font-weight: bold;
+
 }
 
 .cabecalho-menu-item {
     font-family: 'Inter', Ssans-serif;
     color: #20DBA2;
-    font-weight: 400;
+    font-weight: bold;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.conteudo-principal {
+    display: flex;
+    padding: 60px 130px;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.conteudo-principal-escrito{
+    display: flex;
+    flex-direction: column;
+    gap: 42px;
+    margin-bottom: 70px;
+}
+
+.conteudo-principal-escrito-titulo {
+
+    width: 359px;
+    height: 231px;
+    color: #20DBA2;
+    font-family: Inter;
+    font-size: 52px;
+    font-weight: bold;
+}
+
+.conteudo-principal-escrito-subtitulo {
+    width: 407px;
+    color: rgba(33, 195, 146, 0.95);
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.conteudo-principal-botao {
+    background-color: #803BB7A1;
+    width: 70%;
+    padding: 20px;
+    border-radius: 40px;
+    font-size: 28px;
+    color: #20DBA2;
+    font-weight: bold;
+    border: none;
+}
+.imagem{
+    grid-row: auto;
+}
+
+#sobre {
+    padding: 10px 58px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 120px;
+}
+
+ #sobre img {
+    border-radius: 25px;
+ }
+
+.membros {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 10px 20px;
+    border-right: #20DBA2 2px solid;
+    width: fit-content;
+    padding-right: 120px;
+}
+
+.membro_card {
+    display: flex;
+    
+    flex-direction: column;
+    background-color: #20DBA2;
+    width: 400px;
+    color: #000;
+    font-weight: bold;
+    font-size: 22px;
+    gap: 20px;
+    padding: 10px;
+
+}
+
+.sobre_content {
+    display: flex;
+    flex-direction: column;
+    /* margin-right: auto;
+    margin-left: 150px; */
+    gap: 40px;
+}
+
+.sobre_title {
+    font-size: 50px;
+    color: #20DBA2;
+    font-weight: bold;
+}
+
+footer {
+    color: #fff;
+    margin-top: 150px;
+    background-color: transparent;
+    height: 400px;
+}
+
+.local {
+    display: flex;
+    padding: 50px 0;
+    justify-content: space-around;
+    background-color: #000;
+    height: 400px;
+    width: 75%;
+    margin: 0 auto;
+}
+
+.local_text {
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    gap: 30px;
+    width: fit-content;
+    border-right: 2px #fff solid;
+}
+
+.local_text h3 {
+    font-size: 35px;
+}
+
+.local_text p {
+    font-size: 18px;
+    width: 70%;
+}
+
+
+.bottom_content {
+    background-color: #000;
+    height: 300px;
+    margin: 0 auto;
+}
+
+.form_content {
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    gap: 30px;
+}
+.form_content label input {
+    padding: 20px;
+    width: 420px;
     font-size: 18px;
 }
 
-.conteudo {
-    border-top: 0.4px solid #474773;
+#message {
+    height: 200px;
+    width: 420px;
+    font-size: 18px;
+    padding-bottom: 160px;
 }
-.conteudo-principal-escrito{
-    display: flex;
-    
-}
+
+
