--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&family=Kaushan+Script&family=Martian+Mono:wght@200;300&family=Mooli&family=Poppins:wght@200;300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
 
 /* #3C3C62 */
 /* #36A28A */
@@ -22,6 +23,7 @@ body {
 }
 
 .cabecalho {
+    z-index: 99;
     display: flex;
     position: sticky;
     top: 0;
@@ -30,7 +32,7 @@ body {
     justify-content: space-between;
     padding: 10px 58px ;
     background-color :#3C3C62 ;
-    border: none;
+    border-bottom: 2px solid #2c2c47;
 }
 
 .login_btn {
@@ -250,5 +252,70 @@ footer {
     width: 95%;
     height: 400px;
     padding-bottom: 300px;
+}
+
+.content_container {
+    display: flex;
+    justify-content: space-around;
+    position: relative;
+
+}
+
+.content_container ul {
+    list-style-position: inside;
+
+}
+
+.info{
+    background-color: #3C3C62;
+    padding: 30px;
+    width: 1300px;
+    margin-top: 45px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column; 
+    gap: 25px;
+    color: #fff;
+
+}
+
+.sidebar{
+   width: 250px;
+   background-color: #20DBA2;
+   padding-top: 50px;
+   height: 90vh;
+   display: flex;
+   flex-direction: column;
+   position: fixed;
+   top: 100px;
+   left: 0;
+}
+
+.sidebar h1{
+   display: block;
+   padding: 10px 20px;
+   color: #000;
+   text-decoration: none;
+   font-family: "Rubik";
+   letter-spacing: 2px;
+   font-weight: 400;
+   margin: 0;
+   font-size: 25px;
+   text-transform: uppercase;
+}
+
+.sidebar a{
+   display: block;
+   padding: 10px 20px;
+   color: #000;
+   text-decoration: none;
+   font-family: "Rubik";
+   letter-spacing: 2px;
+}
+
+.sidebar a:hover{
+   color: #fff;
+   margin-left: 20px;
+   transition: 0.4s;
 }
 
